_source/css/logz-docs.css
/* ... */
div.feature-box > span {
  text-align: center;
  font-weight: 400;
  font-size: .75rem;
}

span.available-in {
  grid-area: availability;
  color: gray;
}

span.available-in::before {
  content: "" !important;
}

div.feature-box > span::before {
  font-family: "Font Awesome 5 Free";
  white-space: pre;
  font-size: 1rem;
  content: "\f058";
  margin-right: .3rem;
  font-weight: 900;
}

span.community {
  grid-area: community;
}

span.community.yes {
  color: #5eb4e5;
}

span.pro {
  grid-area: pro;
}

span.pro.yes {
  color: #ffbd1f;
}

span.enterprise {
  grid-area: enterprise;
}

span.enterprise.yes {
  color: #53cbb2;
}

/* ===== INFO BOXES ===== */

div.info-box {
  width: 400px;
  margin: 1rem auto;
  border-top: 1px solid;
  border-bottom: 1px solid;
  padding: .5rem;
}

div.info-box ul {
  padding-left: 20px;
}

div.info-box > p::before {
  font-weight: 700;
  display: block;
  margin-bottom: .5rem;
}

div.info-box > p {
  margin: 0;
  font-size: .85rem;
  line-height: 1.2rem;
}

div.info-box > p > p {
  margin-top: .5rem;
  margin-bottom: 0;
}

/* --- info-box colors ---
                  color
gotcha (orange)   #ff971c
warning (red)     #d94141
tip (green)       #5abf4d
note (blue)       #2e97e5   */

/* .warning */
div.info-box.warning {
  border-color: #d94141;
}

div.info-box.warning > p::before {
  content: "Warning   ";
  color: #d94141;
}

/* .note */
div.info-box.note {
  border-color: #2e97e5;
}

div.info-box.note > p::before {
  content: "Note   ";
  color: #2e97e5;
}

div.info-box.note.notes > p::before {
  content: "Notes";
}

/* .gotcha */
div.info-box.gotcha {
  border-color: #ff971c;
}

div.info-box.gotcha > p::before {
  content: "Gotcha   ";
  color: #ff971c;
}

/* .tip */
div.info-box.tip {
  border-color: #5abf4d;
}

div.info-box.tip > p::before {
  content: "Pro Tip   ";
  color: #5abf4d;
}

/* ===== SITE HEADER ===== */

nav.site-links, nav.site-actions {
  font-size: .85rem;
}

nav.site-links li, nav.site-actions li {
  display: inline-block;
  padding: 1rem;
  vertical-align: middle;
}

nav.site-links li {
  margin: auto 1rem;
  width: 1fr;
}

nav.site-actions li {
  margin: auto .25rem;
}

nav.site-links a, nav.site-actions a {
  margin: 0;
  padding: 0;
  display: block;
  text-align: center;
  color: #656565;
}

li.free-trial-btn a {
  /* background-color: rgb(255, 192, 4);
  color: white;
  padding: 6px 20px;
  border-radius: 3px; */
  display: none;
}

/* ===== SITE FOOTER ===== */

footer * {
  vertical-align: middle;
  display: inline-block;
}

footer li {
  margin-right: 1.25rem;
}

div.social-icons li.icon {
  font-size: 1.25rem;
  text-align: center;
}

div.social-icons a {
  color: currentColor;
}

a.atom-feed {
  color: orange !important;
}

/* ===== ALL-PAGES TOC STYLING ===== */

nav.all-pages-toc {
  /* positioning */
  display: block;
  height: 100%;
  margin: 0;
  top: 0;

  /* text */
  color: #53585f;
  font-family: 'Nunito Sans', sans-serif;
}

nav.all-pages-toc ul {
  list-style: none;
  padding: 0;
}

ul.toc-parent {
  font-size: .75rem;
  text-transform: uppercase;
}

ul.toc-child {
  text-transform: none;
  font-size: .85rem;
}

ul.toc-grandchild {
  text-transform: none;
  font-size: .75rem;
  margin-left: 1.25rem;
  display: none;
}

span.toc-heading {
  display: block;
  padding-left: .5rem;
  margin-left: -.5rem;
}

ul.toc-parent span.toc-heading {
  margin-top: 2rem;
  margin-bottom: 0;
}

ul.toc-child span.toc-heading {
  margin-top: 0;
  padding-top: .1rem;
  padding-bottom: .1rem;
}

ul.toc-grandchild span.toc-heading {
  padding-top: .25rem;
  padding-bottom: .25rem;
}

li.toc-active > span.toc-heading {
  background-color: #e1e1e1;
}

nav.all-pages-toc a {
  color: #53585f;
  padding: .1rem .25rem .1rem 0;
}

.external-link::after {
  font-family: "Logzio Icons";
  content: "\e921";
  color: silver;
  font-size: .7rem;
  margin-left: .25rem;
}

span.collapse-button {
  display: inline;
  float: right;
  padding-right: 1.5rem;
}

span.collapse-button path {
  transform: rotate(0deg);
  transition: all .1s ease-out;
  transform-origin: center;
}

span.collapse-button.show path {
  transform: rotate(90deg);
  transition: all .1s ease-out;
  transform-origin: center;
}

ul.toc-child li span.toc-heading:hover {
  background-color: #e1e1e1;
}

/* ===== CONTRIBUTORS LIST ===== */

div.article-info-container {
  font-size: .9rem;
  margin-top: 1rem;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  align-items: baseline;
  justify-content: space-between;
}

div.contributor-list svg {
  margin-right: .25rem;
}

div.contributor-list {
  line-height: 1.25rem;
  margin-bottom: 1rem;
  align-self: flex-start;
}

/* ===== CONTRIBUTOR PROFILE PAGES ===== */

div.contributor-title {
  font-size: 1.2rem;
  color: #263238;
}

div.contributor.icons {
  font-size: 1.5rem;
  padding-top: 1.5rem;
  padding-bottom: .25rem;
}

div.contributor.icons a {
  margin-right: .5rem;
}

div.contributions {
  margin-top: 1.5rem;
}

div.contributions ul {
  padding-left: 0;
  list-style-type: none;
}

div.contributions ul > li {
  padding-bottom: .5rem;
}

/* ===== GITHUB BUTTONS ===== */

div.community-container a {
  display: inline-block;
  margin-right: 5px;
}

span.community.button svg {
  fill: currentColor;
  margin-right: 1px;
  margin-bottom: 2px;
}

span.community.button {
  font-size: 11px;
  font-weight: 700;
  padding: 3px 5px;
}

span.community.button:hover {
  border-bottom: 2px solid currentColor;
}

span.community.button.slackin {
  border-bottom: none;
}

span.community.button * {
  vertical-align: middle;
}

span.community.button.edit {
  color: #2e97e5;
}

span.community.button.issue {
  color: #d94141;
}

/* ===== RELATED LINKS ===== */

div.related-links-container div {
  margin-bottom: 2rem;
  font-size: .8rem;
}

div.related-links-container ul {
  margin: 0;
  padding: 0;
  list-style: none;
}

div.related-links-container span {
  font-weight: 700;
  color: #296386;
}
/* ... */

